# prototype_core

./: .gitmodules  README.md
chisel_rtl/: .gitignore  build.sbt
chisel_rtl/docs/: convention.md  five_stages_cpu_pipeline_thinking.md  intro_memory_access_proxy.md
chisel_rtl/result/verilog_gen/: Top.anno.json  Top.fir  Top.v
chisel_rtl/src/main/scala/: SysTop.scala  TesterChip.scala  TopApp.scala
chisel_rtl/src/main/scala/config/: BaseConfig.scala  Config.scala  preDefine.scala
chisel_rtl/src/main/scala/memory/: MemAccessProxy.scala
chisel_rtl/src/main/scala/pipeline/: SysTop.scala
chisel_rtl/src/main/scala/pipeline/bypass/: FwU.scala  IvCU.scala  PcGU.scala  SCU.scala  SHCU.scala
chisel_rtl/src/main/scala/pipeline/regfile/: Cp0File.scala  GprFile.scala  LhrFile.scala
chisel_rtl/src/main/scala/pipeline/stage/: EXU.scala  IDU.scala  IFU.scala  WBU.scala
chisel_rtl/src/main/scala/pipeline/stage/exusub/: Cp0OpU.scala  DivU.scala  MAU.scala  MulU.scala  NOpU.scala  SOpU.scala  TlbOpU.scala
chisel_rtl/src/main/scala/stages/: CuStage.scala  IdStage.scala  IfStage.scala
chisel_rtl/src/main/scala/top/: Top.scala
data_set/hex_inst/: build.sh
data_set/hex_inst/only_simple_r_type/: add_sub.hex  add_sub.inst  and_or.inst
proj_config/: config.cmake.template
simulator/: .clang-format  CMakeLists.txt  README.md
simulator/sub_projects/sim/: CMakeLists.txt
simulator/sub_projects/sim/src/: main.cpp
tool/: check_before_run.sh  nscscc2023-bjtu-pyenv.yaml  spear.txt  spear_point.txt  startup.sh  update_env.sh
tool/lib/: decorator.sh
(+3 files in other folders)
